--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
       <span class="actions">
         <span class="query_repos glyphicon glyphicon-refresh"></span>
         <span class="loader"><img src="img/loader.gif" width="16px" height="16px" alt="" /></span>
+        <span class="remove_group glyphicon glyphicon-trash"></span>
         <% if (matched_activity_summary.hasAnyActivity()) {
           if (matched_activity_summary.hasIssueActivity()) { %>
             <span class="badge badge-issues" title="Issues">i
@@ -184,6 +185,7 @@
         <span class="reset_activities glyphicon glyphicon-remove"></span>
         <span class="query_activities glyphicon glyphicon-refresh"></span>
         <span class="loader"><img src="img/loader.gif" width="16px" height="16px" alt="" /></span>
+        <span class="remove_repo glyphicon glyphicon-trash"></span>
         <% if (!activity_summary.hasAnyActivity()) { %>
           <span class="badge">&middot;</span>
         <% } else if (!matched_activity_summary.hasAnyActivity()) { %>
